Overflow fix for the side panel of the blocks view

--- a/woost/admin/ui/resources/styles/woost-admin-ui-blocksview.scss
+++ b/woost/admin/ui/resources/styles/woost-admin-ui-blocksview.scss
@@ -18,6 +18,8 @@
     flex-direction: row;
     padding: 0;
     justify-content: stretch;
+    overflow: visible;
+    overflow-y: visible;
 }
 
 #sidePanel {
